chore: add safe area padding

--- a/apps/web/app/global.css
+++ b/apps/web/app/global.css
@@ -21,3 +21,8 @@ a.title:hover {
   -webkit-text-decoration: underline;
   text-decoration: underline;
 }
+
+.safe-area-padding {
+  padding-bottom: constant(safe-area-inset-bottom, 20px); /* Older iOS versions */
+  padding-bottom: env(safe-area-inset-bottom, 20px); /* Modern browsers */
+}
